# pam_scanning

./: .gitignore  CITATION.cff  INSTALL.md  LICENSE  README.md  environment.yml  pyproject.toml
.obsidian/: workspace.json
conda-recipe/: meta.yaml
docs/: blast_setup.md  pipeline.md  usage.md
examples/: manifest.tsv
examples/codon_selection/: Fus3-codonSelection.xlsx
examples/fasta/: S288C_YBL016W_FUS3_flank3.fa  S288C_YBL016W_FUS3_flanking.fa
examples/orf_folder/: FUS3_coding.fa  FUS3_flank5.fa
launchers/: PAM Scanning.bat  PAM Scanning.command
src/pam_scanning/: __init__.py  blast_setup.py  chimeras.py  cli.py  fetch_cds.py  gui.py  library.py  plates.py  plots.py
src/pam_scanning/data/codon_tables/: yeast_64_1_1_all_nuclear.cusp.txt
tests/: test_blast_setup.py  test_cli.py  test_default_genome.py  test_end_to_end.py  test_fetch_cds.py  test_gui_state.py  test_pam_silencing.py  test_parser_parallel.py  test_plates.py  test_plots.py  test_sequence_utils.py
